test/libyul/yulSyntaxTests/if_statement_invalid_4.yul
{
    if calldatasize {}
}
// ----
// ParserError 7104: (22-23): Builtin function "calldatasize" must be called.
